arima trained models for all coin

--- a/arima.qmd
+++ b/arima.qmd
@@ -18,124 +18,132 @@ crypto_data_list <- readRDS("data/crypto_data.rds")
 
 ## Install packages
 ```{r}
-install.packages("forecast", dependencies = TRUE)
+#install.packages("forecast", dependencies = TRUE)
 ```
 
 
-## Prepare data for BTC
+## Training function
 ```{r}
 library(forecast)
 
-btc_ytain <- ytrain_list$BTC
-btc_ts <- ts(btc_ytain$close, frequency = 24)
+train_arima_model <- function(coin_name) {
+  coin_y_train <- ytrain_list[[coin_name]]
+  coin_ts <- ts(coin_y_train$close, frequency = 24)
+
+  arima_model <- auto.arima(coin_ts)
+  return(arima_model)
+}
 ```
 
 
-## Arima model for BTC
+## Arima model for ETH
 ```{r}
-arima_model <- auto.arima(btc_ts)
+arima_model = train_arima_model("ETH")
 summary(arima_model)
 ```
 
 
-# Marima forcasting
-
-## Install Marima
+## Forcasting function
 ```{r}
-# install.packages("marima", dependencies = TRUE)
+library(forecast)
+
+predict_with_arima <- function(model_object, num_steps) {
+  prediction <- forecast(model_object, h = num_steps)
+
+  return(prediction)
+}
 ```
 
 
-## Data dim
+## Prediction for ETH
 ```{r}
-dim(xtrain)
-dim(xtest)
+num_predictions <- nrow(ytest_list$BTC)
+eth_forecast <- predict_with_arima(arima_model, num_predictions)
+print(eth_forecast)
 ```
 
 
-## Training
+## Evaluation function
 ```{r}
-library(marima)
-
-xtrain <- xtrain_list$BTC
-xtest <- xtest_list$BTC
-ytrain <- ytrain_list$BTC
-ytest <- ytest_list$BTC
-
-train_data <- as.matrix(cbind(xtrain, close = ytrain))
-test_data <- as.matrix(cbind(xtest, close = ytest))
-
-model_def <- define.model(kvar = 6,
-                         ar = c(1, 2),        # AR lags at 1 and 2
-                         ma = c(1),           # MA lag at 1
-                         reg.var = c(1:5))    # Predictors for close
-
-fit <- marima(train_data, 
-              ar.pattern = model_def$ar.pattern, 
-              ma.pattern = model_def$ma.pattern,
-              Plot = "none")
-```
-
-
-## Forecasting
-```{r}
-full_series <- rbind(train_data, test_data)
-
-nstart <- nrow(train_data)
-nstep <- nrow(test_data)
-
-forecast_result <- arma.forecast(series = full_series,
-                                marima = fit,
-                                nstart = nstart,
-                                nstep = nstep)
-
-# Extract forecasted values
-forecasted_prices <- forecast_result$forecasts[6, (nstart+1):(nstart+nstep)]
-actual_prices <- test_data[, 6]
-```
-
-
-## Values
-```{r}
-head(actual_prices)
-head(forecasted_prices)
+calculate_rmse <- function(actual_values, predicted_values) {
+  mse <- mean((actual_values - predicted_values)^2)
+  rmse <- sqrt(mse)
+  
+  return(rmse)
+}
 ```
 
 
 ## Evaluation
 ```{r}
-mae <- mean(abs(forecasted_prices - actual_prices))
-cat(sprintf("Mean Absolute Error on Test Data: $%.2f\n", mae))
+predicted_values <- eth_forecast$mean
+actual_values <- ytest_list$ETH$close
 
-rmse <- sqrt(mean((forecasted_prices - actual_prices)^2))
+rmse <- calculate_rmse(actual_values, predicted_values)
 cat(sprintf("Root Mean Squared Error on Test Data: $%.2f\n", rmse))
 ```
 
 
-## Plot
+## Plotting arima prediction function
 ```{r}
-str(forecast_result)
+library(ggplot2)
+library(forecast)
 
-var_array <- forecast_result$prediction.variances
-if (is.list(var_array)) {
-  var_array <- var_array[[1]]
+create_forecast_plot <- function(coin_symbol, forecast_object, ytrain_list, ytest_list) {
+  coin_y_train <- ytrain_list[[coin_symbol]]$close
+  coin_y_test  <- ytest_list[[coin_symbol]]$close
+  
+  full_actual_data <- c(coin_y_train, coin_y_test)
+  full_ts <- ts(full_actual_data, frequency = 24)
+  
+  plot_object <- ggplot() +
+    autolayer(full_ts, series = "Actual Price", color = "black") +
+    autolayer(forecast_object, series = "Forecast") +
+    ggtitle(paste(coin_symbol, "Price Forecast vs Actual")) +
+    xlab("Time (h)") +
+    ylab("Price")
+  
+  return(plot_object)
 }
+```
 
-pred_var <- as.numeric(var_array[6, 6, 1:nstep])
 
-pred_std <- sqrt(pred_var)
+## Plot prediction for ETH
+```{r}
+eth_plot <- create_forecast_plot("ETH", eth_forecast, ytrain_list, ytest_list)
+print(eth_plot)
+```
 
-# 95% CI bounds
-upper_bound <- forecasted_prices + 1.96 * pred_std
-lower_bound <- forecasted_prices - 1.96 * pred_std
 
-plot(actual_prices, type = "l", col = "blue", 
-     main = "MARIMA Price Forecast with CI",
-     ylab = "Price", xlab = "Time")
-lines(forecasted_prices, col = "red")
-lines(upper_bound, col = "gray", lty = 2)
-lines(lower_bound, col = "gray", lty = 2)
-legend("topright", legend = c("Actual","Forecast","95% CI"),
-       col = c("blue","red","gray"), lty = c(2,1,3))
+## Loop to make models for all coins
+### Coin names
+```{r}
+coins <- names(ytrain_list)
+print(coins)
+```
+
+
+## Training Loop
+```{r}
+library(tidyverse)
+
+arima_model_list <- map(coins, train_arima_model)
+
+names(arima_model_list) <- coins
+```
+
+
+## Sample Forcast for BTC
+```{r}
+num_predictions_btc <- nrow(ytest_list$BTC)
+btc_forecast <- predict_with_arima(arima_model_list$BTC, num_predictions_btc)
+
+print(btc_forecast)
+```
+
+
+## Save data
+```{r}
+saveRDS(arima_model_list, "data/arima_model_list.rds")
 ```
 
